<resources>
    <string name="app_name">Task Manager</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="preference_file_key">preferences-file-task-planner</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="invalid_email">invalid email</string>
    <string name="please_enter_a_password">please enter a password</string>
    <string name="server_error_message">Error connecting to the server. Please try again</string>
    <string name="logout">Logout</string>
    <string name="options">Options</string>
    <string name="slogan">Viaja feliz en bici</string>
    <string name="title_activity_maps">Map</string>
    <string name="no_location_data_provided">no_location_data_provided</string>
    <string name="no_address_found">no_location_data_provided</string>
    <string name="address_found">address_found</string>
    <string name="service_not_available">service_not_available</string>
    <string name="invalid_lat_long_used">invalid_lat_long_used</string>
    <string name="BotonDIreccion">localizar</string>
    <string name="ubicacion_actual">ubicacion</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="Nombre_usuario">Daniel Ramirez</string>
    <string name="Correo">daniel.ramirez2@hotmail.com</string>
    <string name="identificacion">98173540234</string>
    <string name="Estrellas">5</string>
</resources>
